Fixed overflow bug on mobile device

--- a/main-frame.css
+++ b/main-frame.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: clip;
 }
 
 .light-theme {
@@ -51,8 +52,12 @@ body {
     --navigation-padding-vertical: 12px;
     --h1-font-size: 48px;
     --h2-font-size: 36px;
+    --h3-font-size: 28px;
+    --h4-font-size: 24px;
     --h6-font-size: 32px;
     --p-font-size: 16px;
+    --section-gap-vertical: 24px;
+    --section-gap-horizontal: 64px;
     --accent-button-font-size: 24px;
 
     --color-theme-duration: .333s;
@@ -78,6 +83,7 @@ body {
 
     background-color: var(--primary-background-color);
     color: var(--text-color);
+    overflow-x: clip;
 }
 
 body > .body-wrapper {
@@ -86,7 +92,7 @@ body > .body-wrapper {
     flex: 1 1 0;
     flex-direction: column;
     gap: var(--content-gap);
-    margin-bottom: var(--navigation-root-padding-vertical);
+    margin-bottom: calc(var(--navigation-root-padding-vertical) * 2);
 }
 
 .no-scroll {
